2011-08-17  Dimitri Glazkov  <dglazkov@chromium.org>

        garden-o-matic Summary view should have items in descending chronological order.
        https://bugs.webkit.org/show_bug.cgi?id=66403

        Reviewed by Adam Barth.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/summary.js: Renamed "push" to "add" for clarity, cleaned up some stuff.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/notifications.js: Rewrote add to insert DOM elements in order.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/notifications_unittests.js: Added unit tests.

2011-08-17  Dimitri Glazkov  <dglazkov@chromium.org>

        Fix a few errors in garden-o-matic frontend unit tests.
        https://bugs.webkit.org/show_bug.cgi?id=66421

        Reviewed by Adam Barth.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/base_unittests.js: Changed my excellent test to view time as variable continuum.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/builders_unittests.js: Tweaked the test to accommodate new builder names.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/notifications.js: Hurriedly covered up my prior sins.

2011-08-17  Adam Barth  <abarth@webkit.org>

        Update Tools to account for (CG) being added to Chromium builder names
        https://bugs.webkit.org/show_bug.cgi?id=66410

        Reviewed by Adam Barth.

        Some of these names will change back once we turn on Skia bots.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/builders_unittests.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/config.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/ui_unittests.js:
        * Scripts/webkitpy/layout_tests/port/builders.py: