@@ -1,5 +1,16 @@
 2011-08-17  Dimitri Glazkov  <dglazkov@chromium.org>
 
+        Remove base.keys and replace it with Object.keys.
+        https://bugs.webkit.org/show_bug.cgi?id=66422
+
+        Reviewed by Adam Barth.
+
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/base.js: Removed base.keys.
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/base_unittests.js: Removed unit tests for it.
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/model.js: Replaced with Object.keys
+
+2011-08-17  Dimitri Glazkov  <dglazkov@chromium.org>
+
         garden-o-matic Summary view should have items in descending chronological order.
         https://bugs.webkit.org/show_bug.cgi?id=66403
 
